// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChangePasswordComponent renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChangePasswordComponent
    screenProps={
      Object {
        "redirectToSettingsScreen": [Function],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "height": 230,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "marginTop": 30,
              }
            }
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "height": 200,
                    "justifyContent": "flex-start",
                    "marginTop": 12,
                  }
                }
              >
                <Image
                  source="BlueBackButton.png"
                  style={
                    Object {
                      "height": 48,
                      "width": 48,
                    }
                  }
                />
              </TouchableOpacity>
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#384B65",
                        "fontFamily": "Montserrat-Bold",
                        "fontSize": 60,
                        "lineHeight": 66,
                      },
                      Object {
                        "marginLeft": 40,
                      },
                    ]
                  }
                >
                  Change
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#384B65",
                        "fontFamily": "Montserrat-Bold",
                        "fontSize": 60,
                        "lineHeight": 66,
                      },
                      Object {
                        "marginLeft": 40,
                      },
                    ]
                  }
                >
                  password
                </Text>
              </View>
            </View>
          </View>
        </View>,
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#384B65",
              "fontFamily": "Montserrat-Regular",
              "fontSize": 32,
              "lineHeight": 40,
            }
          }
        >
          We’ll send you a link to change password
        </Text>,
        <InputComponent
          errorMessage="There is no such email in our system"
          isError={false}
          onChangeText={[Function]}
          placeholder="Enter your email"
          regularMessage="Your email"
          style={
            Object {
              "height": 100,
              "marginTop": 48,
            }
          }
        />,
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "alignSelf": "center",
                  "backgroundColor": "#2794FF",
                  "borderColor": "#2794FF",
                  "borderRadius": 12,
                  "borderWidth": 3,
                  "height": 100,
                  "justifyContent": "center",
                  "marginTop": 580,
                  "width": 670,
                },
                Object {
                  "backgroundColor": "rgba(38, 132, 255, 0.4)",
                  "borderColor": "#FFFFFF",
                },
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "white",
                  "fontFamily": "Montserrat-Bold",
                  "fontSize": 28,
                }
              }
            >
              Send me a link
            </Text>
          </View>
        </TouchableOpacity>,
      ],
      "style": Object {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "paddingHorizontal": 40,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "marginTop": 30,
              }
            }
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "height": 200,
                    "justifyContent": "flex-start",
                    "marginTop": 12,
                  }
                }
              >
                <Image
                  source="BlueBackButton.png"
                  style={
                    Object {
                      "height": 48,
                      "width": 48,
                    }
                  }
                />
              </TouchableOpacity>
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#384B65",
                        "fontFamily": "Montserrat-Bold",
                        "fontSize": 60,
                        "lineHeight": 66,
                      },
                      Object {
                        "marginLeft": 40,
                      },
                    ]
                  }
                >
                  Change
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#384B65",
                        "fontFamily": "Montserrat-Bold",
                        "fontSize": 60,
                        "lineHeight": 66,
                      },
                      Object {
                        "marginLeft": 40,
                      },
                    ]
                  }
                >
                  password
                </Text>
              </View>
            </View>
          </View>,
          "style": Object {
            "height": 230,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <View
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "height": 200,
                    "justifyContent": "flex-start",
                    "marginTop": 12,
                  }
                }
              >
                <Image
                  source="BlueBackButton.png"
                  style={
                    Object {
                      "height": 48,
                      "width": 48,
                    }
                  }
                />
              </TouchableOpacity>
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#384B65",
                        "fontFamily": "Montserrat-Bold",
                        "fontSize": 60,
                        "lineHeight": 66,
                      },
                      Object {
                        "marginLeft": 40,
                      },
                    ]
                  }
                >
                  Change
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#384B65",
                        "fontFamily": "Montserrat-Bold",
                        "fontSize": 60,
                        "lineHeight": 66,
                      },
                      Object {
                        "marginLeft": 40,
                      },
                    ]
                  }
                >
                  password
                </Text>
              </View>
            </View>,
            "style": Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "marginTop": 30,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <TouchableOpacity
                  activeOpacity={0.2}
                  onPress={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "height": 200,
                      "justifyContent": "flex-start",
                      "marginTop": 12,
                    }
                  }
                >
                  <Image
                    source="BlueBackButton.png"
                    style={
                      Object {
                        "height": 48,
                        "width": 48,
                      }
                    }
                  />
                </TouchableOpacity>,
                <View>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "color": "#384B65",
                          "fontFamily": "Montserrat-Bold",
                          "fontSize": 60,
                          "lineHeight": 66,
                        },
                        Object {
                          "marginLeft": 40,
                        },
                      ]
                    }
                  >
                    Change
                  </Text>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "color": "#384B65",
                          "fontFamily": "Montserrat-Bold",
                          "fontSize": 60,
                          "lineHeight": 66,
                        },
                        Object {
                          "marginLeft": 40,
                        },
                      ]
                    }
                  >
                    password
                  </Text>
                </View>,
              ],
              "style": Object {
                "flexDirection": "row",
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "activeOpacity": 0.2,
                  "children": <Image
                    source="BlueBackButton.png"
                    style={
                      Object {
                        "height": 48,
                        "width": 48,
                      }
                    }
                  />,
                  "onPress": [Function],
                  "style": Object {
                    "alignItems": "center",
                    "height": 200,
                    "justifyContent": "flex-start",
                    "marginTop": 12,
                  },
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "source": "BlueBackButton.png",
                    "style": Object {
                      "height": 48,
                      "width": 48,
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#384B65",
                            "fontFamily": "Montserrat-Bold",
                            "fontSize": 60,
                            "lineHeight": 66,
                          },
                          Object {
                            "marginLeft": 40,
                          },
                        ]
                      }
                    >
                      Change
                    </Text>,
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#384B65",
                            "fontFamily": "Montserrat-Bold",
                            "fontSize": 60,
                            "lineHeight": 66,
                          },
                          Object {
                            "marginLeft": 40,
                          },
                        ]
                      }
                    >
                      password
                    </Text>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "accessible": true,
                      "allowFontScaling": true,
                      "children": "Change",
                      "ellipsizeMode": "tail",
                      "style": Array [
                        Object {
                          "color": "#384B65",
                          "fontFamily": "Montserrat-Bold",
                          "fontSize": 60,
                          "lineHeight": 66,
                        },
                        Object {
                          "marginLeft": 40,
                        },
                      ],
                    },
                    "ref": null,
                    "rendered": "Change",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "accessible": true,
                      "allowFontScaling": true,
                      "children": "password",
                      "ellipsizeMode": "tail",
                      "style": Array [
                        Object {
                          "color": "#384B65",
                          "fontFamily": "Montserrat-Bold",
                          "fontSize": 60,
                          "lineHeight": 66,
                        },
                        Object {
                          "marginLeft": 40,
                        },
                      ],
                    },
                    "ref": null,
                    "rendered": "password",
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": "We’ll send you a link to change password",
          "ellipsizeMode": "tail",
          "style": Object {
            "color": "#384B65",
            "fontFamily": "Montserrat-Regular",
            "fontSize": 32,
            "lineHeight": 40,
          },
        },
        "ref": null,
        "rendered": "We’ll send you a link to change password",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "errorMessage": "There is no such email in our system",
          "isError": false,
          "onChangeText": [Function],
          "placeholder": "Enter your email",
          "regularMessage": "Your email",
          "style": Object {
            "height": 100,
            "marginTop": 48,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "alignSelf": "center",
                  "backgroundColor": "#2794FF",
                  "borderColor": "#2794FF",
                  "borderRadius": 12,
                  "borderWidth": 3,
                  "height": 100,
                  "justifyContent": "center",
                  "marginTop": 580,
                  "width": 670,
                },
                Object {
                  "backgroundColor": "rgba(38, 132, 255, 0.4)",
                  "borderColor": "#FFFFFF",
                },
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "white",
                  "fontFamily": "Montserrat-Bold",
                  "fontSize": 28,
                }
              }
            >
              Send me a link
            </Text>
          </View>,
          "onPress": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "white",
                  "fontFamily": "Montserrat-Bold",
                  "fontSize": 28,
                }
              }
            >
              Send me a link
            </Text>,
            "style": Array [
              Object {
                "alignItems": "center",
                "alignSelf": "center",
                "backgroundColor": "#2794FF",
                "borderColor": "#2794FF",
                "borderRadius": 12,
                "borderWidth": 3,
                "height": 100,
                "justifyContent": "center",
                "marginTop": 580,
                "width": 670,
              },
              Object {
                "backgroundColor": "rgba(38, 132, 255, 0.4)",
                "borderColor": "#FFFFFF",
              },
            ],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "Send me a link",
              "ellipsizeMode": "tail",
              "style": Object {
                "color": "white",
                "fontFamily": "Montserrat-Bold",
                "fontSize": 28,
              },
            },
            "ref": null,
            "rendered": "Send me a link",
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "height": 230,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                  "marginTop": 30,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <TouchableOpacity
                  activeOpacity={0.2}
                  onPress={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "height": 200,
                      "justifyContent": "flex-start",
                      "marginTop": 12,
                    }
                  }
                >
                  <Image
                    source="BlueBackButton.png"
                    style={
                      Object {
                        "height": 48,
                        "width": 48,
                      }
                    }
                  />
                </TouchableOpacity>
                <View>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "color": "#384B65",
                          "fontFamily": "Montserrat-Bold",
                          "fontSize": 60,
                          "lineHeight": 66,
                        },
                        Object {
                          "marginLeft": 40,
                        },
                      ]
                    }
                  >
                    Change
                  </Text>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "color": "#384B65",
                          "fontFamily": "Montserrat-Bold",
                          "fontSize": 60,
                          "lineHeight": 66,
                        },
                        Object {
                          "marginLeft": 40,
                        },
                      ]
                    }
                  >
                    password
                  </Text>
                </View>
              </View>
            </View>
          </View>,
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#384B65",
                "fontFamily": "Montserrat-Regular",
                "fontSize": 32,
                "lineHeight": 40,
              }
            }
          >
            We’ll send you a link to change password
          </Text>,
          <InputComponent
            errorMessage="There is no such email in our system"
            isError={false}
            onChangeText={[Function]}
            placeholder="Enter your email"
            regularMessage="Your email"
            style={
              Object {
                "height": 100,
                "marginTop": 48,
              }
            }
          />,
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "backgroundColor": "#2794FF",
                    "borderColor": "#2794FF",
                    "borderRadius": 12,
                    "borderWidth": 3,
                    "height": 100,
                    "justifyContent": "center",
                    "marginTop": 580,
                    "width": 670,
                  },
                  Object {
                    "backgroundColor": "rgba(38, 132, 255, 0.4)",
                    "borderColor": "#FFFFFF",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "white",
                    "fontFamily": "Montserrat-Bold",
                    "fontSize": 28,
                  }
                }
              >
                Send me a link
              </Text>
            </View>
          </TouchableOpacity>,
        ],
        "style": Object {
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "paddingHorizontal": 40,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                  "marginTop": 30,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <TouchableOpacity
                  activeOpacity={0.2}
                  onPress={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "height": 200,
                      "justifyContent": "flex-start",
                      "marginTop": 12,
                    }
                  }
                >
                  <Image
                    source="BlueBackButton.png"
                    style={
                      Object {
                        "height": 48,
                        "width": 48,
                      }
                    }
                  />
                </TouchableOpacity>
                <View>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "color": "#384B65",
                          "fontFamily": "Montserrat-Bold",
                          "fontSize": 60,
                          "lineHeight": 66,
                        },
                        Object {
                          "marginLeft": 40,
                        },
                      ]
                    }
                  >
                    Change
                  </Text>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "color": "#384B65",
                          "fontFamily": "Montserrat-Bold",
                          "fontSize": 60,
                          "lineHeight": 66,
                        },
                        Object {
                          "marginLeft": 40,
                        },
                      ]
                    }
                  >
                    password
                  </Text>
                </View>
              </View>
            </View>,
            "style": Object {
              "height": 230,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <TouchableOpacity
                  activeOpacity={0.2}
                  onPress={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "height": 200,
                      "justifyContent": "flex-start",
                      "marginTop": 12,
                    }
                  }
                >
                  <Image
                    source="BlueBackButton.png"
                    style={
                      Object {
                        "height": 48,
                        "width": 48,
                      }
                    }
                  />
                </TouchableOpacity>
                <View>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "color": "#384B65",
                          "fontFamily": "Montserrat-Bold",
                          "fontSize": 60,
                          "lineHeight": 66,
                        },
                        Object {
                          "marginLeft": 40,
                        },
                      ]
                    }
                  >
                    Change
                  </Text>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "color": "#384B65",
                          "fontFamily": "Montserrat-Bold",
                          "fontSize": 60,
                          "lineHeight": 66,
                        },
                        Object {
                          "marginLeft": 40,
                        },
                      ]
                    }
                  >
                    password
                  </Text>
                </View>
              </View>,
              "style": Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "marginTop": 30,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <TouchableOpacity
                    activeOpacity={0.2}
                    onPress={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                        "height": 200,
                        "justifyContent": "flex-start",
                        "marginTop": 12,
                      }
                    }
                  >
                    <Image
                      source="BlueBackButton.png"
                      style={
                        Object {
                          "height": 48,
                          "width": 48,
                        }
                      }
                    />
                  </TouchableOpacity>,
                  <View>
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#384B65",
                            "fontFamily": "Montserrat-Bold",
                            "fontSize": 60,
                            "lineHeight": 66,
                          },
                          Object {
                            "marginLeft": 40,
                          },
                        ]
                      }
                    >
                      Change
                    </Text>
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#384B65",
                            "fontFamily": "Montserrat-Bold",
                            "fontSize": 60,
                            "lineHeight": 66,
                          },
                          Object {
                            "marginLeft": 40,
                          },
                        ]
                      }
                    >
                      password
                    </Text>
                  </View>,
                ],
                "style": Object {
                  "flexDirection": "row",
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "activeOpacity": 0.2,
                    "children": <Image
                      source="BlueBackButton.png"
                      style={
                        Object {
                          "height": 48,
                          "width": 48,
                        }
                      }
                    />,
                    "onPress": [Function],
                    "style": Object {
                      "alignItems": "center",
                      "height": 200,
                      "justifyContent": "flex-start",
                      "marginTop": 12,
                    },
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "source": "BlueBackButton.png",
                      "style": Object {
                        "height": 48,
                        "width": 48,
                      },
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                          Array [
                            Object {
                              "color": "#384B65",
                              "fontFamily": "Montserrat-Bold",
                              "fontSize": 60,
                              "lineHeight": 66,
                            },
                            Object {
                              "marginLeft": 40,
                            },
                          ]
                        }
                      >
                        Change
                      </Text>,
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                          Array [
                            Object {
                              "color": "#384B65",
                              "fontFamily": "Montserrat-Bold",
                              "fontSize": 60,
                              "lineHeight": 66,
                            },
                            Object {
                              "marginLeft": 40,
                            },
                          ]
                        }
                      >
                        password
                      </Text>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "accessible": true,
                        "allowFontScaling": true,
                        "children": "Change",
                        "ellipsizeMode": "tail",
                        "style": Array [
                          Object {
                            "color": "#384B65",
                            "fontFamily": "Montserrat-Bold",
                            "fontSize": 60,
                            "lineHeight": 66,
                          },
                          Object {
                            "marginLeft": 40,
                          },
                        ],
                      },
                      "ref": null,
                      "rendered": "Change",
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "accessible": true,
                        "allowFontScaling": true,
                        "children": "password",
                        "ellipsizeMode": "tail",
                        "style": Array [
                          Object {
                            "color": "#384B65",
                            "fontFamily": "Montserrat-Bold",
                            "fontSize": 60,
                            "lineHeight": 66,
                          },
                          Object {
                            "marginLeft": 40,
                          },
                        ],
                      },
                      "ref": null,
                      "rendered": "password",
                      "type": [Function],
                    },
                  ],
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "We’ll send you a link to change password",
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "#384B65",
              "fontFamily": "Montserrat-Regular",
              "fontSize": 32,
              "lineHeight": 40,
            },
          },
          "ref": null,
          "rendered": "We’ll send you a link to change password",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "errorMessage": "There is no such email in our system",
            "isError": false,
            "onChangeText": [Function],
            "placeholder": "Enter your email",
            "regularMessage": "Your email",
            "style": Object {
              "height": 100,
              "marginTop": 48,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "backgroundColor": "#2794FF",
                    "borderColor": "#2794FF",
                    "borderRadius": 12,
                    "borderWidth": 3,
                    "height": 100,
                    "justifyContent": "center",
                    "marginTop": 580,
                    "width": 670,
                  },
                  Object {
                    "backgroundColor": "rgba(38, 132, 255, 0.4)",
                    "borderColor": "#FFFFFF",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "white",
                    "fontFamily": "Montserrat-Bold",
                    "fontSize": 28,
                  }
                }
              >
                Send me a link
              </Text>
            </View>,
            "onPress": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "white",
                    "fontFamily": "Montserrat-Bold",
                    "fontSize": 28,
                  }
                }
              >
                Send me a link
              </Text>,
              "style": Array [
                Object {
                  "alignItems": "center",
                  "alignSelf": "center",
                  "backgroundColor": "#2794FF",
                  "borderColor": "#2794FF",
                  "borderRadius": 12,
                  "borderWidth": 3,
                  "height": 100,
                  "justifyContent": "center",
                  "marginTop": 580,
                  "width": 670,
                },
                Object {
                  "backgroundColor": "rgba(38, 132, 255, 0.4)",
                  "borderColor": "#FFFFFF",
                },
              ],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": "Send me a link",
                "ellipsizeMode": "tail",
                "style": Object {
                  "color": "white",
                  "fontFamily": "Montserrat-Bold",
                  "fontSize": 28,
                },
              },
              "ref": null,
              "rendered": "Send me a link",
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ChangePasswordComponent renders correctly on error 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChangePasswordComponent
    screenProps={
      Object {
        "redirectToSettingsScreen": [Function],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "height": 230,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "marginTop": 30,
              }
            }
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "height": 200,
                    "justifyContent": "flex-start",
                    "marginTop": 12,
                  }
                }
              >
                <Image
                  source="BlueBackButton.png"
                  style={
                    Object {
                      "height": 48,
                      "width": 48,
                    }
                  }
                />
              </TouchableOpacity>
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#384B65",
                        "fontFamily": "Montserrat-Bold",
                        "fontSize": 60,
                        "lineHeight": 66,
                      },
                      Object {
                        "marginLeft": 40,
                      },
                    ]
                  }
                >
                  Change
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#384B65",
                        "fontFamily": "Montserrat-Bold",
                        "fontSize": 60,
                        "lineHeight": 66,
                      },
                      Object {
                        "marginLeft": 40,
                      },
                    ]
                  }
                >
                  password
                </Text>
              </View>
            </View>
          </View>
        </View>,
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#384B65",
              "fontFamily": "Montserrat-Regular",
              "fontSize": 32,
              "lineHeight": 40,
            }
          }
        >
          We’ll send you a link to change password
        </Text>,
        <InputComponent
          errorMessage="There is no such email in our system"
          isError={true}
          onChangeText={[Function]}
          placeholder="Enter your email"
          regularMessage="Your email"
          style={
            Object {
              "height": 100,
              "marginTop": 48,
            }
          }
        />,
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "alignSelf": "center",
                  "backgroundColor": "#2794FF",
                  "borderColor": "#2794FF",
                  "borderRadius": 12,
                  "borderWidth": 3,
                  "height": 100,
                  "justifyContent": "center",
                  "marginTop": 580,
                  "width": 670,
                },
                Object {
                  "backgroundColor": "rgba(38, 132, 255, 0.4)",
                  "borderColor": "#FFFFFF",
                },
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "white",
                  "fontFamily": "Montserrat-Bold",
                  "fontSize": 28,
                }
              }
            >
              Send me a link
            </Text>
          </View>
        </TouchableOpacity>,
      ],
      "style": Object {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "paddingHorizontal": 40,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "marginTop": 30,
              }
            }
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "height": 200,
                    "justifyContent": "flex-start",
                    "marginTop": 12,
                  }
                }
              >
                <Image
                  source="BlueBackButton.png"
                  style={
                    Object {
                      "height": 48,
                      "width": 48,
                    }
                  }
                />
              </TouchableOpacity>
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#384B65",
                        "fontFamily": "Montserrat-Bold",
                        "fontSize": 60,
                        "lineHeight": 66,
                      },
                      Object {
                        "marginLeft": 40,
                      },
                    ]
                  }
                >
                  Change
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#384B65",
                        "fontFamily": "Montserrat-Bold",
                        "fontSize": 60,
                        "lineHeight": 66,
                      },
                      Object {
                        "marginLeft": 40,
                      },
                    ]
                  }
                >
                  password
                </Text>
              </View>
            </View>
          </View>,
          "style": Object {
            "height": 230,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <View
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "height": 200,
                    "justifyContent": "flex-start",
                    "marginTop": 12,
                  }
                }
              >
                <Image
                  source="BlueBackButton.png"
                  style={
                    Object {
                      "height": 48,
                      "width": 48,
                    }
                  }
                />
              </TouchableOpacity>
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#384B65",
                        "fontFamily": "Montserrat-Bold",
                        "fontSize": 60,
                        "lineHeight": 66,
                      },
                      Object {
                        "marginLeft": 40,
                      },
                    ]
                  }
                >
                  Change
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#384B65",
                        "fontFamily": "Montserrat-Bold",
                        "fontSize": 60,
                        "lineHeight": 66,
                      },
                      Object {
                        "marginLeft": 40,
                      },
                    ]
                  }
                >
                  password
                </Text>
              </View>
            </View>,
            "style": Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "marginTop": 30,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <TouchableOpacity
                  activeOpacity={0.2}
                  onPress={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "height": 200,
                      "justifyContent": "flex-start",
                      "marginTop": 12,
                    }
                  }
                >
                  <Image
                    source="BlueBackButton.png"
                    style={
                      Object {
                        "height": 48,
                        "width": 48,
                      }
                    }
                  />
                </TouchableOpacity>,
                <View>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "color": "#384B65",
                          "fontFamily": "Montserrat-Bold",
                          "fontSize": 60,
                          "lineHeight": 66,
                        },
                        Object {
                          "marginLeft": 40,
                        },
                      ]
                    }
                  >
                    Change
                  </Text>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "color": "#384B65",
                          "fontFamily": "Montserrat-Bold",
                          "fontSize": 60,
                          "lineHeight": 66,
                        },
                        Object {
                          "marginLeft": 40,
                        },
                      ]
                    }
                  >
                    password
                  </Text>
                </View>,
              ],
              "style": Object {
                "flexDirection": "row",
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "activeOpacity": 0.2,
                  "children": <Image
                    source="BlueBackButton.png"
                    style={
                      Object {
                        "height": 48,
                        "width": 48,
                      }
                    }
                  />,
                  "onPress": [Function],
                  "style": Object {
                    "alignItems": "center",
                    "height": 200,
                    "justifyContent": "flex-start",
                    "marginTop": 12,
                  },
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "source": "BlueBackButton.png",
                    "style": Object {
                      "height": 48,
                      "width": 48,
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#384B65",
                            "fontFamily": "Montserrat-Bold",
                            "fontSize": 60,
                            "lineHeight": 66,
                          },
                          Object {
                            "marginLeft": 40,
                          },
                        ]
                      }
                    >
                      Change
                    </Text>,
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#384B65",
                            "fontFamily": "Montserrat-Bold",
                            "fontSize": 60,
                            "lineHeight": 66,
                          },
                          Object {
                            "marginLeft": 40,
                          },
                        ]
                      }
                    >
                      password
                    </Text>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "accessible": true,
                      "allowFontScaling": true,
                      "children": "Change",
                      "ellipsizeMode": "tail",
                      "style": Array [
                        Object {
                          "color": "#384B65",
                          "fontFamily": "Montserrat-Bold",
                          "fontSize": 60,
                          "lineHeight": 66,
                        },
                        Object {
                          "marginLeft": 40,
                        },
                      ],
                    },
                    "ref": null,
                    "rendered": "Change",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "accessible": true,
                      "allowFontScaling": true,
                      "children": "password",
                      "ellipsizeMode": "tail",
                      "style": Array [
                        Object {
                          "color": "#384B65",
                          "fontFamily": "Montserrat-Bold",
                          "fontSize": 60,
                          "lineHeight": 66,
                        },
                        Object {
                          "marginLeft": 40,
                        },
                      ],
                    },
                    "ref": null,
                    "rendered": "password",
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": "We’ll send you a link to change password",
          "ellipsizeMode": "tail",
          "style": Object {
            "color": "#384B65",
            "fontFamily": "Montserrat-Regular",
            "fontSize": 32,
            "lineHeight": 40,
          },
        },
        "ref": null,
        "rendered": "We’ll send you a link to change password",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "errorMessage": "There is no such email in our system",
          "isError": true,
          "onChangeText": [Function],
          "placeholder": "Enter your email",
          "regularMessage": "Your email",
          "style": Object {
            "height": 100,
            "marginTop": 48,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "alignSelf": "center",
                  "backgroundColor": "#2794FF",
                  "borderColor": "#2794FF",
                  "borderRadius": 12,
                  "borderWidth": 3,
                  "height": 100,
                  "justifyContent": "center",
                  "marginTop": 580,
                  "width": 670,
                },
                Object {
                  "backgroundColor": "rgba(38, 132, 255, 0.4)",
                  "borderColor": "#FFFFFF",
                },
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "white",
                  "fontFamily": "Montserrat-Bold",
                  "fontSize": 28,
                }
              }
            >
              Send me a link
            </Text>
          </View>,
          "onPress": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "white",
                  "fontFamily": "Montserrat-Bold",
                  "fontSize": 28,
                }
              }
            >
              Send me a link
            </Text>,
            "style": Array [
              Object {
                "alignItems": "center",
                "alignSelf": "center",
                "backgroundColor": "#2794FF",
                "borderColor": "#2794FF",
                "borderRadius": 12,
                "borderWidth": 3,
                "height": 100,
                "justifyContent": "center",
                "marginTop": 580,
                "width": 670,
              },
              Object {
                "backgroundColor": "rgba(38, 132, 255, 0.4)",
                "borderColor": "#FFFFFF",
              },
            ],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "Send me a link",
              "ellipsizeMode": "tail",
              "style": Object {
                "color": "white",
                "fontFamily": "Montserrat-Bold",
                "fontSize": 28,
              },
            },
            "ref": null,
            "rendered": "Send me a link",
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "height": 230,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                  "marginTop": 30,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <TouchableOpacity
                  activeOpacity={0.2}
                  onPress={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "height": 200,
                      "justifyContent": "flex-start",
                      "marginTop": 12,
                    }
                  }
                >
                  <Image
                    source="BlueBackButton.png"
                    style={
                      Object {
                        "height": 48,
                        "width": 48,
                      }
                    }
                  />
                </TouchableOpacity>
                <View>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "color": "#384B65",
                          "fontFamily": "Montserrat-Bold",
                          "fontSize": 60,
                          "lineHeight": 66,
                        },
                        Object {
                          "marginLeft": 40,
                        },
                      ]
                    }
                  >
                    Change
                  </Text>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "color": "#384B65",
                          "fontFamily": "Montserrat-Bold",
                          "fontSize": 60,
                          "lineHeight": 66,
                        },
                        Object {
                          "marginLeft": 40,
                        },
                      ]
                    }
                  >
                    password
                  </Text>
                </View>
              </View>
            </View>
          </View>,
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#384B65",
                "fontFamily": "Montserrat-Regular",
                "fontSize": 32,
                "lineHeight": 40,
              }
            }
          >
            We’ll send you a link to change password
          </Text>,
          <InputComponent
            errorMessage="There is no such email in our system"
            isError={true}
            onChangeText={[Function]}
            placeholder="Enter your email"
            regularMessage="Your email"
            style={
              Object {
                "height": 100,
                "marginTop": 48,
              }
            }
          />,
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "backgroundColor": "#2794FF",
                    "borderColor": "#2794FF",
                    "borderRadius": 12,
                    "borderWidth": 3,
                    "height": 100,
                    "justifyContent": "center",
                    "marginTop": 580,
                    "width": 670,
                  },
                  Object {
                    "backgroundColor": "rgba(38, 132, 255, 0.4)",
                    "borderColor": "#FFFFFF",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "white",
                    "fontFamily": "Montserrat-Bold",
                    "fontSize": 28,
                  }
                }
              >
                Send me a link
              </Text>
            </View>
          </TouchableOpacity>,
        ],
        "style": Object {
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "paddingHorizontal": 40,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                  "marginTop": 30,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <TouchableOpacity
                  activeOpacity={0.2}
                  onPress={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "height": 200,
                      "justifyContent": "flex-start",
                      "marginTop": 12,
                    }
                  }
                >
                  <Image
                    source="BlueBackButton.png"
                    style={
                      Object {
                        "height": 48,
                        "width": 48,
                      }
                    }
                  />
                </TouchableOpacity>
                <View>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "color": "#384B65",
                          "fontFamily": "Montserrat-Bold",
                          "fontSize": 60,
                          "lineHeight": 66,
                        },
                        Object {
                          "marginLeft": 40,
                        },
                      ]
                    }
                  >
                    Change
                  </Text>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "color": "#384B65",
                          "fontFamily": "Montserrat-Bold",
                          "fontSize": 60,
                          "lineHeight": 66,
                        },
                        Object {
                          "marginLeft": 40,
                        },
                      ]
                    }
                  >
                    password
                  </Text>
                </View>
              </View>
            </View>,
            "style": Object {
              "height": 230,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <TouchableOpacity
                  activeOpacity={0.2}
                  onPress={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "height": 200,
                      "justifyContent": "flex-start",
                      "marginTop": 12,
                    }
                  }
                >
                  <Image
                    source="BlueBackButton.png"
                    style={
                      Object {
                        "height": 48,
                        "width": 48,
                      }
                    }
                  />
                </TouchableOpacity>
                <View>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "color": "#384B65",
                          "fontFamily": "Montserrat-Bold",
                          "fontSize": 60,
                          "lineHeight": 66,
                        },
                        Object {
                          "marginLeft": 40,
                        },
                      ]
                    }
                  >
                    Change
                  </Text>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "color": "#384B65",
                          "fontFamily": "Montserrat-Bold",
                          "fontSize": 60,
                          "lineHeight": 66,
                        },
                        Object {
                          "marginLeft": 40,
                        },
                      ]
                    }
                  >
                    password
                  </Text>
                </View>
              </View>,
              "style": Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "marginTop": 30,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <TouchableOpacity
                    activeOpacity={0.2}
                    onPress={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                        "height": 200,
                        "justifyContent": "flex-start",
                        "marginTop": 12,
                      }
                    }
                  >
                    <Image
                      source="BlueBackButton.png"
                      style={
                        Object {
                          "height": 48,
                          "width": 48,
                        }
                      }
                    />
                  </TouchableOpacity>,
                  <View>
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#384B65",
                            "fontFamily": "Montserrat-Bold",
                            "fontSize": 60,
                            "lineHeight": 66,
                          },
                          Object {
                            "marginLeft": 40,
                          },
                        ]
                      }
                    >
                      Change
                    </Text>
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#384B65",
                            "fontFamily": "Montserrat-Bold",
                            "fontSize": 60,
                            "lineHeight": 66,
                          },
                          Object {
                            "marginLeft": 40,
                          },
                        ]
                      }
                    >
                      password
                    </Text>
                  </View>,
                ],
                "style": Object {
                  "flexDirection": "row",
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "activeOpacity": 0.2,
                    "children": <Image
                      source="BlueBackButton.png"
                      style={
                        Object {
                          "height": 48,
                          "width": 48,
                        }
                      }
                    />,
                    "onPress": [Function],
                    "style": Object {
                      "alignItems": "center",
                      "height": 200,
                      "justifyContent": "flex-start",
                      "marginTop": 12,
                    },
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "source": "BlueBackButton.png",
                      "style": Object {
                        "height": 48,
                        "width": 48,
                      },
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                          Array [
                            Object {
                              "color": "#384B65",
                              "fontFamily": "Montserrat-Bold",
                              "fontSize": 60,
                              "lineHeight": 66,
                            },
                            Object {
                              "marginLeft": 40,
                            },
                          ]
                        }
                      >
                        Change
                      </Text>,
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                          Array [
                            Object {
                              "color": "#384B65",
                              "fontFamily": "Montserrat-Bold",
                              "fontSize": 60,
                              "lineHeight": 66,
                            },
                            Object {
                              "marginLeft": 40,
                            },
                          ]
                        }
                      >
                        password
                      </Text>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "accessible": true,
                        "allowFontScaling": true,
                        "children": "Change",
                        "ellipsizeMode": "tail",
                        "style": Array [
                          Object {
                            "color": "#384B65",
                            "fontFamily": "Montserrat-Bold",
                            "fontSize": 60,
                            "lineHeight": 66,
                          },
                          Object {
                            "marginLeft": 40,
                          },
                        ],
                      },
                      "ref": null,
                      "rendered": "Change",
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "accessible": true,
                        "allowFontScaling": true,
                        "children": "password",
                        "ellipsizeMode": "tail",
                        "style": Array [
                          Object {
                            "color": "#384B65",
                            "fontFamily": "Montserrat-Bold",
                            "fontSize": 60,
                            "lineHeight": 66,
                          },
                          Object {
                            "marginLeft": 40,
                          },
                        ],
                      },
                      "ref": null,
                      "rendered": "password",
                      "type": [Function],
                    },
                  ],
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "We’ll send you a link to change password",
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "#384B65",
              "fontFamily": "Montserrat-Regular",
              "fontSize": 32,
              "lineHeight": 40,
            },
          },
          "ref": null,
          "rendered": "We’ll send you a link to change password",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "errorMessage": "There is no such email in our system",
            "isError": true,
            "onChangeText": [Function],
            "placeholder": "Enter your email",
            "regularMessage": "Your email",
            "style": Object {
              "height": 100,
              "marginTop": 48,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "backgroundColor": "#2794FF",
                    "borderColor": "#2794FF",
                    "borderRadius": 12,
                    "borderWidth": 3,
                    "height": 100,
                    "justifyContent": "center",
                    "marginTop": 580,
                    "width": 670,
                  },
                  Object {
                    "backgroundColor": "rgba(38, 132, 255, 0.4)",
                    "borderColor": "#FFFFFF",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "white",
                    "fontFamily": "Montserrat-Bold",
                    "fontSize": 28,
                  }
                }
              >
                Send me a link
              </Text>
            </View>,
            "onPress": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "white",
                    "fontFamily": "Montserrat-Bold",
                    "fontSize": 28,
                  }
                }
              >
                Send me a link
              </Text>,
              "style": Array [
                Object {
                  "alignItems": "center",
                  "alignSelf": "center",
                  "backgroundColor": "#2794FF",
                  "borderColor": "#2794FF",
                  "borderRadius": 12,
                  "borderWidth": 3,
                  "height": 100,
                  "justifyContent": "center",
                  "marginTop": 580,
                  "width": 670,
                },
                Object {
                  "backgroundColor": "rgba(38, 132, 255, 0.4)",
                  "borderColor": "#FFFFFF",
                },
              ],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": "Send me a link",
                "ellipsizeMode": "tail",
                "style": Object {
                  "color": "white",
                  "fontFamily": "Montserrat-Bold",
                  "fontSize": 28,
                },
              },
              "ref": null,
              "rendered": "Send me a link",
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
